...
<FrameLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/stopView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/stopTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="4dp"
                android:text="Caption"
                android:textAppearance="?android:attr/textAppearanceMedium"
...
