...
        android:text="Lon"
        app:layout_constraintBaseline_toBaselineOf="@+id/LatitudeText"
        app:layout_constraintLeft_toRightOf="@+id/LatitudeText"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="201dp"
        android:layout_height="54dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:onClick="enterTourOverview"
        android:text="Start Tour"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LatitudeText" />

    <Button
...
