<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.hottenstein.krimirundgang.StopDetailActivity"
    tools:showIn="@layout/activity_stop_detail">

    <TextView
        android:id="@+id/stopContentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="There should be some content here instead of this text!" />

</android.support.v4.widget.NestedScrollView>
